<resources>
    <string name="app_name">Claim Assured</string>
    <string name="my_tasks">My Tasks</string>

    <string name="unassigned">Unassigned</string>
    <string name="assigned">Assigned</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="burger_menu">Burger Menu</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="background_image">Background image</string>
    <string name="my_garage">My Garage</string>
    <string name="tat_breached">TAT Breached</string>
    <string name="ageing">Ageing</string>
    <string name="claim_intimated_on">Claim Intimated on</string>
    <string name="worker">Worker</string>
    <string name="owner">Owner</string>
    <string name="more">More</string>
    <string name="divider_text">|</string>
    <string name="location">Location</string>
    <string name="slide_to_assign_yourself">Slide to Assign Yourself</string>
    <string name="garage_image">Garage Image</string>
    <string name="logout">Logout</string>

</resources>