<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/assignedTaskFragment"
        android:icon="@drawable/icon_unassigned"
        android:title="@string/assigned"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/inProgressTaskFragment"
        android:icon="@drawable/icon_assigned"
        android:title="@string/in_progress"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/uploadTaskFragment"
        android:icon="@drawable/icon_upload"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/completedTaskFragment"
        android:icon="@drawable/icon_completed"
        android:title="@string/completed"
        app:showAsAction="ifRoom" />

</menu>