<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/dimen_24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/nav_btn"
        android:contentDescription="@string/burger_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:padding="@dimen/dimen_5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_burger_menu" />

    <TextView
        android:id="@+id/heading_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_14dp"
        android:layout_marginEnd="@dimen/dimen_14dp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/my_tasks"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/dimen_heading"
        app:layout_constraintBottom_toBottomOf="@+id/nav_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toEndOf="@+id/nav_btn"
        app:layout_constraintTop_toTopOf="@+id/nav_btn" />

    <ImageView
        android:id="@+id/btn_search"
        android:contentDescription="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_11dp"
        android:padding="@dimen/dimen_5dp"
        app:layout_constraintBottom_toBottomOf="@+id/heading_txt"
        app:layout_constraintEnd_toStartOf="@+id/btn_sort"
        app:layout_constraintTop_toTopOf="@+id/heading_txt"
        app:srcCompat="@drawable/search_line" />

    <ImageView
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/sort"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_search"
        app:srcCompat="@drawable/icon_sort" />

    <TextView
        android:id="@+id/service_center_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="Skydac Kia Service, Jankipuram"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/heading_txt"
        app:layout_constraintTop_toBottomOf="@+id/heading_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>
